# testify

./: .gitignore  CHANGELOG.md  README.md  build-static.sh  chromedriver.nix  default.nix  docker-image.nix  docker-load.sh  docker-run.sh  figlet  selenium.sh  stack.yaml  testify.cabal
src/: Api.hs  Automate.hs  Client.hs  ClientMain.hs  Config.hs  Main.hs  Server.hs  Types.hs  index.html
src/Types/: Api.hs
