cabal-version:       2.4
name:                testify
version:             0.1.0.0

executable server
  main-is:             Server.hs
  build-depends:       base ^>=4.12.0.0
   , aeson
   , containers
   , mtl
   , process
   , servant
   , servant-options
   , servant-server
   , Shpadoinkle
   , text
   , time
   , transformers
   , transformers-base
   , wai
   , warp
   , webdriver
  hs-source-dirs:      src
  default-language:    Haskell2010

executable client
  main-is:             Client.hs
  build-depends:       base ^>=4.12.0.0
   , aeson
   , containers
   , exceptions
   , generic-lens
   , jsaddle
   , lens
   , mtl
   , servant
   , servant-client
   , Shpadoinkle
   , Shpadoinkle-backend-pardiff
   , Shpadoinkle-developer-tools
   , Shpadoinkle-html
   , Shpadoinkle-lens
   , Shpadoinkle-router
   , stm-lifted
   , text
   , time
   , transformers
   , transformers-base
   , unliftio
  hs-source-dirs:      src
  default-language:    Haskell2010
