cabal-version:       2.4
name:                testify
version:             0.1.0.0

executable server
  main-is:             Server.hs
  build-depends:       base ^>=4.12.0.0
   , aeson
   , containers
   , exceptions
   , extra
   , generic-lens
   , http-types
   , lens
   , mtl
   , process
   , servant
   , servant-foreign
   , servant-options
   , servant-server
   , Shpadoinkle
   , Shpadoinkle-backend-pardiff
   , Shpadoinkle-developer-tools
   , Shpadoinkle-html
   , Shpadoinkle-lens
   , Shpadoinkle-router
   , stm-lifted
   , jsaddle
   , text
   , time
   , transformers
   , transformers-base
   , unliftio
   , wai
   , wai-app-static
   , warp
   , webdriver
  hs-source-dirs:      src
  if impl(ghcjs)
    buildable: False
  else
    buildable: True
  default-language:    Haskell2010

executable client
  main-is:             ClientMain.hs
  build-depends:       base ^>=4.12.0.0
   , aeson
   , containers
   , exceptions
   , generic-lens
   , jsaddle
   , lens
   , mtl
   , servant
   , servant-client
   , Shpadoinkle
   , Shpadoinkle-backend-pardiff
   , Shpadoinkle-developer-tools
   , Shpadoinkle-html
   , Shpadoinkle-lens
   , Shpadoinkle-router
   , stm-lifted
   , text
   , time
   , transformers
   , transformers-base
   , unliftio
  hs-source-dirs:      src
  default-language:    Haskell2010
